# fast-bump

./: CHANGELOG.md  Cargo.toml  README.md
src/: fast_arena.rs  lib.rs
src/tests/: fast_arena.rs  mod.rs
